# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
)

filegroup(
    name = "models",
    srcs = glob(
        [
            "models/**",
        ],
        exclude = [
            "**/*.sha512",
        ],
    ),
    data = [
        "assets/2dof_iiwa_translating_base.sdf",
        "assets/box_small.urdf",
        "assets/double_pendulum_world.urdf",
        "assets/oneDOF_iiwa7_with_box_collision.sdf",
        "assets/shelves.sdf",
        "assets/single_pendulum_world.urdf",
        "assets/twoDOF_iiwa7_with_box_collision.sdf",
        "directives/trans2dof_directives.yaml",
    ],
    visibility = ["//visibility:public"],
)

##########################################################
# LIBRARIES
##########################################################

drake_py_library(
    name = "visualization_utils",
    srcs = [
        "visualization_utils.py",
    ],
    visibility = ["//visibility:public"],
)


drake_py_library(
    name = "prm",
    srcs = [
        "prm.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "iris_plant_visualizer",
    srcs = [
        "iris_plant_visualizer.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)

##########################################################
# NOTEBOOKS
##########################################################
## BEGIN NON-CANONICAL EXAMPLES

drake_jupyter_py_binary(
    name = "double_pendulum_example",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:prm",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "pinball_iiwas_prm_certify",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:prm",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

## END NON-CANONICAL EXAMPLES

