# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
load(
    "//tools/skylark:drake_py.bzl",
    "drake_py_library",
    "drake_py_unittest",
)

load(
    "@drake//tools/skylark:drake_py.bzl",
    "drake_py_binary",
)

filegroup(
    name = "models",
    srcs = glob(
        [
            "models/**",
        ],
        exclude = [
            "**/*.sha512",
        ],
    ),
    data = [
        "assets/2dof_iiwa_translating_base.sdf",
        "assets/box_small.urdf",
        "assets/double_pendulum_world.urdf",
        "assets/oneDOF_iiwa7_with_box_collision.sdf",
        "assets/shelves.sdf",
        "assets/single_pendulum_world.urdf",
        "assets/twoDOF_iiwa7_with_box_collision.sdf",
        "assets/iiwa6/iiwa6_with_box_collision.sdf",
        "assets/iiwa6/iiwa6_no_collision.sdf",
        "directives/trans2dof_directives.yaml",
    ],
    visibility = ["//visibility:public"],
)

##########################################################
# LIBRARIES
##########################################################

drake_py_library(
    name = "visualization_utils",
    srcs = [
        "visualization_utils.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "sampling_based_motion_planners",
    srcs = [
        "sampling_based_motion_planners.py",
    ],
    visibility = ["//visibility:public"],
)

drake_py_library(
    name = "iris_plant_visualizer",
    srcs = [
        "iris_plant_visualizer.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bindings/pydrake",
    ],
)

##########################################################
# NOTEBOOKS
##########################################################
## BEGIN NON-CANONICAL EXAMPLES
drake_jupyter_py_binary(
    name = "pinball_iiwas",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:sampling_based_motion_planners",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)


drake_jupyter_py_binary(
    name = "7dof_iiwas_prm_certify",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:sampling_based_motion_planners",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "7dof_iiwas_rrt",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:sampling_based_motion_planners",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "n_link_pend",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:sampling_based_motion_planners",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "14dof_iiwas_prm_certify",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:sampling_based_motion_planners",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)


drake_jupyter_py_binary(
    name = "simple_pendulum_example",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:sampling_based_motion_planners",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "double_pendulum_example",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:sampling_based_motion_planners",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)



## END NON-CANONICAL EXAMPLES

drake_jupyter_py_binary(
    name = "2d_example_visualize_planes",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)


drake_jupyter_py_binary(
    name = "dual_ur",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
        "//manipulation/models/ur3e:models",
        "//manipulation/models/wsg_50_description:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "single_ur",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
        "//manipulation/models/ur3e:models",
        "//manipulation/models/wsg_50_description:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "pendulum_on_rail2d",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_py_binary(
    name = "pinball_iiwas_prm",
    srcs = ["pinball_iiwas_prm.py"],
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:sampling_based_motion_planners",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)

drake_jupyter_py_binary(
    name = "ik_teleop",
    add_test_rule = 0,
    data = [
        "//C_Iris_Examples:models",
        "//manipulation/models/ur3e:models",
        "//manipulation/models/wsg_50_description:models",
    ],
    deps = [
        "//C_Iris_Examples:iris_plant_visualizer",
        "//C_Iris_Examples:visualization_utils",
        "//bindings/pydrake",
    ],
)
