## -*- python -*-
## This file contains rules for Bazel; see drake/doc/bazel.rst.
#
#load(
#    "@drake//tools/skylark:drake_cc.bzl",
#    "drake_cc_binary",
#    "drake_cc_googletest",
#    "drake_cc_library",
#    "drake_cc_package_library",
#)
#load("//tools/jupyter:jupyter_py.bzl", "drake_jupyter_py_binary")
#load(
#    "//tools/skylark:drake_py.bzl",
#    "drake_py_library",
#    "drake_py_unittest",
#)
#
#filegroup(
#    name = "models",
#    data = [
#        "assets/box.urdf",
#        "assets/doublerob.urdf",
#        "assets/ground.urdf",
#        "assets/lid.urdf",
#        "assets/shelves.sdf",
#        "assets/shelves2.sdf",
#        "assets/shelves3.sdf",
#        "assets/shelves4.sdf",
#        "planar_iiwa14_one_sphere.urdf",
#        "planar_iiwa_dense_collision_welded_gripper.yaml",
#        "planar_iiwa_simple_collision_welded_gripper.yaml",
#        "schunk_wsg_50_welded_fingers.sdf",
#        "shelves.sdf",
#    ],
#    visibility = ["//visibility:public"],
#)
#
###########################################################
## NOTEBOOKS
###########################################################
#
#drake_jupyter_py_binary(
#    name = "sos_iris_example_python",
#    add_test_rule = 0,
#    data = [
#        "//manipulation/models/iiwa_description:models",
#        "//C_Iris_Examples:models",
#    ],
#    deps = [
#        "//bindings/pydrake",
#        "//C_Iris_Examples/python_iris_certifier:certified_iris_generator",
#        "//C_Iris_Examples:iris_plant_visualizer",
#        "//C_Iris_Examples:iris_utils",
#        "//C_Iris_Examples:visualizations_utils",
#    ],
#)
#
###########################################################
## LIBRARIES
###########################################################
#drake_py_library(
#    name = "certified_iris_generator",
#    srcs = [
#        "certified_iris_generator.py",
#    ],
#    visibility = ["//visibility:public"],
#    deps = [
#        "//C_Iris_Examples/python_iris_certifier:iris_utils",
#    ],
#)
#
#drake_py_library(
#    name = "iris_utils",
#    srcs = [
#        "iris_utils.py",
#    ],
#    visibility = ["//visibility:public"],
#)
